@@ -7,9 +7,9 @@ import static org.junit.Assert.assertThat;
 
 import java.nio.file.Path;
 import java.nio.file.Paths;
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.HashMap;
+import java.util.List;
 import java.util.Map;
 import org.junit.Test;
 
@@ -22,7 +22,7 @@ public class SubmissionTest {
     SubmittableFile fileB = new SubmittableFile("keyB", "fileB");
     String language = "de";
     SubmissionInfo info = new SubmissionInfo(
-        10, Collections.singletonMap(language, Arrays.asList(fileA, fileB)));
+        10, Collections.singletonMap(language, List.of(fileA, fileB)));
     Map<String, Path> files = new HashMap<>();
     files.put("fileA", Paths.get("some.file"));
     files.put("fileB", Paths.get("other.file"));
