@@ -3,7 +3,7 @@ package fi.aalto.cs.apluscourses.presentation.filter;
 import static org.junit.Assert.assertEquals;
 import static org.junit.Assert.assertNotNull;
 
-import java.util.Arrays;
+import java.util.List;
 import java.util.Optional;
 import org.junit.Test;
 
@@ -18,30 +18,30 @@ public class AndFilterTest {
 
   @Test
   public void testAndFilter() {
-    Filter andFilter1 = new AndFilter(Arrays.asList(nil, nil, nil));
+    Filter andFilter1 = new AndFilter(List.of(nil, nil, nil));
     assertEquals(Optional.empty(), andFilter1.apply(new Object()));
 
-    Filter andFilter2 = new AndFilter(Arrays.asList(nil, no, nil));
+    Filter andFilter2 = new AndFilter(List.of(nil, no, nil));
     assertEquals(Optional.of(false), andFilter2.apply(new Object()));
 
-    Filter andFilter3 = new AndFilter(Arrays.asList(nil, no, yes));
+    Filter andFilter3 = new AndFilter(List.of(nil, no, yes));
     assertEquals(Optional.of(false), andFilter3.apply(new Object()));
 
-    Filter andFilter4 = new AndFilter(Arrays.asList(yes, no, yes));
+    Filter andFilter4 = new AndFilter(List.of(yes, no, yes));
     assertEquals(Optional.of(false), andFilter4.apply(new Object()));
 
-    Filter andFilter5 = new AndFilter(Arrays.asList(nil, yes, yes));
+    Filter andFilter5 = new AndFilter(List.of(nil, yes, yes));
     assertEquals(Optional.of(true), andFilter5.apply(new Object()));
 
-    Filter andFilter6 = new AndFilter(Arrays.asList(nil, nil, yes));
+    Filter andFilter6 = new AndFilter(List.of(nil, nil, yes));
     assertEquals(Optional.of(true), andFilter6.apply(new Object()));
 
     // short-circuit
-    Filter andFilter7 = new AndFilter(Arrays.asList(nil, no, err));
+    Filter andFilter7 = new AndFilter(List.of(nil, no, err));
     assertEquals(Optional.of(false), andFilter7.apply(new Object()));
 
     // can't short-circuit -> err
-    Filter andFilter8 = new AndFilter(Arrays.asList(nil, yes, err));
+    Filter andFilter8 = new AndFilter(List.of(nil, yes, err));
     Exception exception = null;
     try {
       andFilter8.apply(new Object());
